crates/ruff_python_ast/tests/snapshots/preorder__bytes_literals.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprBytesLiteral
      - BytesLiteral
      - BytesLiteral
      - BytesLiteral

