crates/ruff_python_ast/tests/snapshots/preorder__class_type_parameters.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtClassDef
    - TypeParamTypeVar
      - ExprName
    - TypeParamTypeVar
    - TypeParamTypeVarTuple
    - TypeParamParamSpec
    - StmtExpr
      - ExprEllipsisLiteral

