crates/ruff_python_ast/tests/snapshots/preorder__compare.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprCompare
      - ExprConstant
        - Int(Small(4))
      - Lt
      - ExprName
      - Lt
      - ExprConstant
        - Int(Small(5))

