crates/ruff_python_ast/tests/snapshots/preorder__decorators.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtFunctionDef
    - ExprName
    - Arguments
    - StmtPass
  - StmtClassDef
    - ExprName
    - StmtPass

