crates/ruff_python_ast/tests/snapshots/preorder__dict_comprehension.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprDictComp
      - ExprName
      - ExprBinOp
        - ExprName
        - Pow
        - ExprConstant
          - Int(Small(2))
      - Comprehension
        - ExprName
        - ExprName

