crates/ruff_python_ast/tests/snapshots/preorder__f_strings.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprFString
      - StringLiteral
      - ExprStringLiteral
        - StringLiteral
      - ExprFormattedValue
        - ExprName
        - ExprFString
          - ExprStringLiteral
            - StringLiteral
          - ExprFormattedValue
            - ExprName
          - ExprStringLiteral
            - StringLiteral
      - ExprStringLiteral
        - StringLiteral

