crates/ruff_python_ast/tests/snapshots/preorder__function_positional_only_with_default.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtFunctionDef
    - Parameters
      - Parameter
      - Parameter
      - ExprNumberLiteral
      - Parameter
      - ExprNumberLiteral
      - Parameter
    - StmtPass

