crates/ruff_python_ast/tests/snapshots/preorder__function_type_parameters.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtFunctionDef
    - TypeParamTypeVar
      - ExprName
    - TypeParamTypeVar
    - TypeParamTypeVarTuple
    - TypeParamParamSpec
    - Parameters
    - StmtExpr
      - ExprEllipsisLiteral

