crates/ruff_python_ast/tests/snapshots/preorder__list_comprehension.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprListComp
      - ExprName
      - Comprehension
        - ExprName
        - ExprName

