crates/ruff_python_ast/tests/snapshots/preorder__match_class_pattern.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtMatch
    - ExprName
    - MatchCase
      - PatternMatchClass
        - ExprName
        - PatternMatchValue
          - ExprNumberLiteral
        - PatternMatchValue
          - ExprNumberLiteral
      - StmtExpr
        - ExprEllipsisLiteral
    - MatchCase
      - PatternMatchClass
        - ExprName
        - PatternMatchValue
          - ExprNumberLiteral
        - PatternMatchValue
          - ExprNumberLiteral
        - PatternMatchValue
          - ExprNumberLiteral
      - StmtExpr
        - ExprEllipsisLiteral

