crates/ruff_python_ast/tests/snapshots/preorder__set_comprehension.snap
---
source: crates/ruff_python_ast/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprSetComp
      - ExprName
      - Comprehension
        - ExprName
        - ExprName

